2010-04-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Make ‘bufrealloc’ static.

	* rcsfnms.c (bufrealloc): Make static.
	* base.h (bufrealloc): Delete func decl.

2010-04-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] When reading from stdin, save directly to ‘SHARED’.

	* rcsgen.c (getsstdin): Don't take ‘struct buf *’; save
	directly to ‘SHARED’; rewrite sole-dot-on-line detection/handling.
	(putdesc): Update call to ‘getsstdin’.
	* ci.c (getlogmsg): Update call to ‘getlogmsg’.
	* base.h (getsstdin): Update func decl.

2010-04-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: accumulate_range

	* b-divvy.h (accumulate_range): New func decl.
	* b-divvy.c (accumulate_range): New func.
	* rcsedit.c (naturalize): Use ‘accumulate_range’.
	* rcslex.c (getphrases): Likewise.

2010-04-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Use ‘fseeko’ more.

	* rcslex.c (Orewind): Use ‘fseeko’ instead of ‘fseek’.

2010-04-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Use ‘ftello’ more.

	* ci.c (main): Use ‘ftello’ instead of ‘ftell’.

2010-04-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Overhaul read-only file handling.

	* b-fro.h: New file.
	* b-fro.c: New file.
	* Makefile.am (libparts_a_SOURCES): Add b-fro.h, b-fro.c.
	* b-fb.h (Ieof): Delete func decl.
	* b-fb.c (Ieof): Delete func.
	* base.h [HAVE_SYS_MMAN_H]: Don't #include <sys/mman.h>.
	(large_memory, maps_memory): Delete #define:s.
	(RILE): Delete typedef.
	(declarecache, setupcache, cache, uncache, Igeteof, cachegeteof, Iget)
	(cacheget, cacheunget, Ifileno, Ioffset_type, Irewind, Itell, GETC):
	Delete macros.
	(Igetmore): Delete func decl.
	(open_rcsfile_fn_t): Update typedef.
	(parse_state): Delete member ‘rilebuf’.
	(flow): Update type of member ‘from’.
	(rcswriteopen, rcsfcmp, rcsreadopen, putdftext, getoldkeys):
	Update return value and parameter types and in func decls.
	(Ifclose, Izclose, hey_trundling, I_open, Iopen, testIeof)
	(Irewind): Delete func decls.