@@ -1,5 +1,12 @@
 2010-04-18  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[int] When constructing the lockfile name, save directly to ‘SHARED’.
+
+	* rcsedit.c (rcswriteopen): Use ‘SHARED’
+	for lockfile name mangling instead of ‘struct buf’.
+
+2010-04-18  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[int C] Make ‘bufrealloc’ static.
 
 	* rcsfnms.c (bufrealloc): Make static.
